restore backup and add remove acc

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -43,6 +43,11 @@
         </div>
     </aside>
 
+    <div id="remove-btn">
+        <a href="/users/remove-account/<%=current_user.id%>">
+            Remove Account
+        </a>
+    </div>
 
     <%}else{%>
         <!-- else show only the profile info -->
