--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,3 +1,18 @@
+<style>
+    small {
+        color: whitesmoke;
+        font-family: sans-serif;
+        text-align: left;
+    }
+    
+    #user-name {
+        transition: 0.3s all ease-in-out;
+    }
+    
+    #user-name:hover {
+        color: darkblue;
+    }
+</style>
 <header id="layout-header">
     <nav>
         <div class="mini-logo">
@@ -17,8 +32,9 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/users/profile/<%= user.id %>">
-                            <%= user.name %>
+                        <a id="user-name" href="/users/profile/<%= user.id %>">
+                            <%= user.name %> <br>
+                                <small>View your profile</small>
                         </a>
                     </li>
                     <li>
