--- a/assets/scss/user_profile.scss
+++ b/assets/scss/user_profile.scss
@@ -1,4 +1,12 @@
 body {
+    #remove-btn {
+        font-size: 1.25rem;
+        padding: 1%;
+        cursor: pointer;
+        color: whitesmoke;
+        background-color: #393b44;
+        border: none;
+    }
     img:hover {
         box-shadow: 0px 0px 5px 5px #f1f3f8;
     }
