--- a/assets/css/user_profile.css
+++ b/assets/css/user_profile.css
@@ -1,6 +1,16 @@
 body {
   background-color: #f1f3f8;
   font-family: sans-serif; }
+  body #remove-btn a {
+    position: relative;
+    top: -150px;
+    left: 90%;
+    font-size: 1rem;
+    padding: 0.75%;
+    cursor: pointer;
+    color: whitesmoke;
+    background-color: #393b44;
+    border: none; }
   body img:hover {
     box-shadow: 0px 0px 5px 5px #f1f3f8; }
   body img {
