--- a/assets/scss/user_profile.scss
+++ b/assets/scss/user_profile.scss
@@ -1,11 +1,16 @@
 body {
     #remove-btn {
-        font-size: 1.25rem;
-        padding: 1%;
-        cursor: pointer;
-        color: whitesmoke;
-        background-color: #393b44;
-        border: none;
+        a {
+            position: relative;
+            top: -150px;
+            left: 90%;
+            font-size: 1rem;
+            padding: 0.75%;
+            cursor: pointer;
+            color: whitesmoke;
+            background-color: #393b44;
+            border: none;
+        }
     }
     img:hover {
         box-shadow: 0px 0px 5px 5px #f1f3f8;
