add owner in footer

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -17,6 +17,10 @@
                         <a href="/users/profile/<%= user.id %>">Profile</a>
                         <%}%>
                 </li>
+                <li style="float: right; color: whitesmoke; font-size: larger;">
+                    Made with <span style="color: red; font-size: larger;">♥</span> by <a onmouseover="this.style.color='red'" onMouseOut="this.style.color='whitesmoke'" style="text-decoration: none; color: whitesmoke; transition: 0.3s all ease-in-out;"
+                        href="https://github.com/singh-shivam789">Shivam</a>
+                </li>
             </ul>
         </nav>
     </div>
